# constellation-composition-mcp

./: .gitignore  LICENSE  README.md  create_structure.sh  pyproject.toml  verify_structure.sh
docs/: ARCHITECTURE.md  INTEGRATION.md
examples/: basic_usage.py
src/constellation_composition_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  run_tests.sh  test_basic.py
