[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constellation-composition-mcp"
version = "0.1.0"
description = "MCP server that maps astronomical constellation patterns to compositional parameters for image generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dal", email = "dal@lushy.ai"}
]
keywords = ["mcp", "constellation", "composition", "image-generation", "astronomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
constellation-composition-mcp = "constellation_composition_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/constellation-composition-mcp"
Repository = "https://github.com/yourusername/constellation-composition-mcp"
Issues = "https://github.com/yourusername/constellation-composition-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/constellation_composition_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
